# exam-guard

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yml  env-api-dev-example  mypy.ini  pyproject.toml
data/: exam_guard_start.sql
docker/: entrypoint.sh
jupyter/: Dockerfile  requirements.txt
notebooks/: outliers_from_postgres.ipynb
src/: alembic.ini  logging.dev.yaml  pytest.ini
src/app/: app_container.py  asgi.py  broker.py  exceptions.py  schemas.py  session_deps.py  setup_logging.py  worker.py
src/config/: __init__.py  settings.py
src/exam_guard/adapters/api/broker/: router.py
src/exam_guard/adapters/api/handlers/: stream_data.py
src/exam_guard/adapters/api/http/: monitor_data.py  router.py
src/exam_guard/adapters/api/http/schemas/: monitor_data.py
src/exam_guard/adapters/spi/repositories/: monitor.py  monitor_data.py  monitor_type.py  student_register.py
src/exam_guard/di/mixins/: __init__.py  monitor_data.py  student_register.py
src/exam_guard/domain/entities/: monitor.py  monitor_data.py  monitor_type.py  student_register.py  value_objects.py
src/exam_guard/domain/ports/repositories/: monitor_data.py  monitor_type.py  student_register.py
src/exam_guard/domain/services/: monitor_data.py  student_register.py
src/exam_guard/domain/use_cases/: monitor_alert.py  student_monitoring.py
src/exam_guard/infra/database/sqlalchemy/: models.py
src/exam_guard/schemas/: monitor_data.py
src/fixtures/: generate_data.py  load_master_data.py  load_monitor_data.py  load_monitor_data_http.py
src/infra/database/alembic/: env.py
src/infra/database/alembic/versions/: 064cc4c46c5e_add_interval_to_monitors.py  0a5b8f3ee8e4_remove_unneded.py  627da398ae64_add_students_register_monitors.py  66c54e0ce509_add_rules_to_students_register.py  943ca9d94360_add_monitor_type_model.py  9c59ef854f9f_add_sku_to_monitors.py  a3a83ab8bff0_add_index_to_monitor_data.py  b90b0efc0cf4_init.py  cab2cadbc2bd_rename_end_subtstract_for_move_end_to.py  cbabc257dbfd_add_ts_to_monitor_data.py  edeb094ee1fe_add_unique_constraint_monitor_data_.py
src/infra/database/sqlalchemy/: session.py  sqlalchemy.py
src/scripts/: anomalies.py  fake_monitor.py
src/shared/repository/: sqlalchemy.py
src/shared/repository/ports/: generic.py
src/tests/: conftest.py
src/tests/app/: test_hello_world.py  test_settings.py
src/tests/exam_guard/adapters/api/http/: test_monitor_data_router.py
src/tests/exam_guard/adapters/spi/repositories/: test_monitor_data.py
src/tests/exam_guard/domain/services/: test_monitor_data_service.py
src/tests/exam_guard/domain/use_cases/: test_monitor_alert_use_case.py
src/tests/fixtures/: test_generate_data.py
src/tests/utils/: test_dataframe.py  test_di.py
src/utils/: async_utils.py  dataframe.py  di.py  parse_eval.py  singleton.py
src/utils/logger/formatter/: standard_extra.py
